<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5pt"
    android:paddingRight="5pt"
    android:background="@color/colorPrimary"
    tools:context=".Register">

    <EditText
        android:id="@+id/reg_nama"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:hint="@string/reg_nama"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:inputType="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_email"
        android:hint="@string/reg_email"
        android:layout_below="@id/reg_nama"
        android:paddingTop="5pt"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_pass"
        android:hint="@string/reg_pass"
        android:layout_below="@id/reg_email"
        android:paddingTop="5pt"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_alamat"
        android:hint="@string/reg_alamat"
        android:layout_below="@id/reg_pass"
        android:paddingTop="5pt"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_prov"
        android:hint="@string/reg_prov"
        android:paddingTop="5pt"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_below="@id/reg_alamat"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_kota"
        android:hint="@string/reg_kota"
        android:paddingTop="5pt"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:layout_below="@id/reg_prov"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_daftar"
        android:onClick="launchInsert"
        android:text="@string/btn_daftar"
        android:layout_below="@id/reg_kota"
        android:layout_marginTop="10pt"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>